# TormentNexus

./: .borg_startup_marker  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  DEPLOY.md  GEMINI.md  HANDOFF.md  MEMORY.md  README.md  ROADMAP.md  SUBMODULES_INDEX.md  SUBMODULE_INVENTORY.md  TODO.md  VERSION  VERSION.md  VISION.md  YOUR_KEY_HERE  agentic-ads.db  borg-mcp-stdio.bat  build.bat  catalog.db  chat_export_1780148046621.md  comprehensive_mcp_test.mjs  fix_build3.py  fix_server_archiver.py  fix_server_consensus.py  fix_server_fleet.py  fix_server_fleet_route.py  fix_server_init_final.py  fix_server_init_v4.py  fix_server_init_v5.py  fix_server_init_v6.py  fix_server_init_v7.py  fix_server_init_v8.py  fix_server_init_v9.py  fix_server_surgical.py  go.mod  go.sum  (+20 more)
..go_backup_old/: 12306_mcp.go  1key4ai_mcp_studio.go  (+1796 more)
go/submodules/CTX/: .gitignore  Cargo.toml  README.md  guide.md
go/submodules/CTX/.github/: RELEASE_TEMPLATE.md
go/submodules/CTX/.github/workflows/: release.yml
go/submodules/CTX/Formula/: ctx.rb
go/submodules/CTX/benchmarks/: memory-ab.example.toml
go/submodules/CTX/crates/ctx-ast/: Cargo.toml
go/submodules/CTX/crates/ctx-ast/src/: lib.rs
go/submodules/CTX/crates/ctx-ast/tests/: symbols.rs
go/submodules/CTX/crates/ctx-cli/: Cargo.toml  build.rs
go/submodules/CTX/crates/ctx-cli/src/: dashboard.rs  host_integration.rs  main.rs  update.rs
go/submodules/CTX/crates/ctx-cli/tests/: cli_behavior.rs  demo_assets.rs  opencode_host_integration_spec.rs
go/submodules/CTX/crates/ctx-config/: Cargo.toml
go/submodules/CTX/crates/ctx-config/src/: lib.rs
go/submodules/CTX/crates/ctx-config/tests/: config_behavior.rs
go/submodules/CTX/crates/ctx-core/: Cargo.toml
go/submodules/CTX/crates/ctx-core/src/: command_run.rs  index_cache.rs  lib.rs  path_filters.rs  read_cache.rs
go/submodules/CTX/crates/ctx-core/tests/: command_run_behavior.rs  core_behavior.rs  index_cache_behavior.rs  memory_behavior.rs  read_cache_behavior.rs  retrieval_behavior.rs
go/submodules/CTX/crates/ctx-graph/: Cargo.toml
go/submodules/CTX/crates/ctx-graph/src/: lib.rs  schema.sql
go/submodules/CTX/crates/ctx-graph/tests/: graph_features.rs  graph_store.rs
go/submodules/CTX/crates/ctx-hooks/: Cargo.toml
go/submodules/CTX/crates/ctx-hooks/src/: lib.rs
go/submodules/CTX/crates/ctx-hooks/tests/: hooks.rs
go/submodules/CTX/crates/ctx-intake/: Cargo.toml
go/submodules/CTX/crates/ctx-intake/src/: lib.rs
go/submodules/CTX/crates/ctx-intake/tests/: intake_behavior.rs
go/submodules/CTX/crates/ctx-mcp/: Cargo.toml
go/submodules/CTX/crates/ctx-mcp/src/: lib.rs
go/submodules/CTX/crates/ctx-mcp/tests/: demo_fixture_mcp.rs  mcp.rs
go/submodules/CTX/crates/ctx-pack/: Cargo.toml
go/submodules/CTX/crates/ctx-pack/src/: lib.rs  packer.rs  rewriter.rs
go/submodules/CTX/crates/ctx-pack/tests/: pack_behavior.rs  packing_priorities.rs
go/submodules/CTX/crates/ctx-prune/: Cargo.toml
go/submodules/CTX/crates/ctx-prune/src/: heuristic.rs  lib.rs
go/submodules/CTX/crates/ctx-prune/src/parsers/: diff.rs  logs.rs  mod.rs
go/submodules/CTX/crates/ctx-prune/tests/: diff.rs  logs.rs  prune_behavior.rs  traceback.rs
go/submodules/CTX/crates/ctx-semantic/: Cargo.toml
go/submodules/CTX/crates/ctx-semantic/src/: lib.rs
go/submodules/CTX/crates/ctx-semantic/tests/: onnx_backend.rs  ranking.rs  ranking_pipeline.rs
go/submodules/CTX/crates/ctx-telemetry/: Cargo.toml
go/submodules/CTX/crates/ctx-telemetry/src/: audit.rs  gain.rs  lib.rs  stats.rs
go/submodules/CTX/crates/ctx-telemetry/tests/: audit.rs  benchmark.rs  stats.rs
go/submodules/CTX/crates/ctx-token/: Cargo.toml
go/submodules/CTX/crates/ctx-token/src/: lib.rs
go/submodules/CTX/crates/ctx-token/tests/: token_estimation.rs
go/submodules/CTX/demo/fixtures/opencode-auth-lab/: AGENTS.md  CLAUDE.md  CODEX.md  README.md  package-lock.json  package.json
go/submodules/CTX/demo/fixtures/opencode-auth-lab/.github/: copilot-instructions.md
go/submodules/CTX/demo/fixtures/opencode-auth-lab/.opencode/commands/: ctx-ask.md  ctx-benchmark-memory-ab.md  ctx-benchmark-memory-suite.md  ctx-doctor.md  ctx-explain.md  ctx-graph-build.md  ctx-graph-query.md  ctx-graph-rebuild.md  ctx-help.md  ctx-hook.md  ctx-index.md  ctx-init.md  ctx-mcp-config-opencode.md  ctx-mcp-serve.md  ctx-mcp-stdio.md  ctx-memory-bootstrap.md  ctx-memory-delete.md  ctx-memory-export.md  ctx-memory-get.md  ctx-memory-import.md  ctx-memory-list.md  ctx-memory-search.md  ctx-memory-set.md  ctx-opencode-install.md  ctx-pack.md  ctx-prune-diff.md  ctx-prune-logs.md  ctx-reindex.md  ctx-retrieve.md  ctx-stats.md  ctx.md
go/submodules/CTX/demo/fixtures/opencode-auth-lab/answers/: graph-answer.txt  markdown-answer.txt
go/submodules/CTX/demo/fixtures/opencode-auth-lab/benchmarks/: memory-suite.toml  report.json  report.md
go/submodules/CTX/demo/fixtures/opencode-auth-lab/checklists/: graph-memory-quality.md
go/submodules/CTX/demo/fixtures/opencode-auth-lab/diff/: refresh-route.patch
go/submodules/CTX/demo/fixtures/opencode-auth-lab/expected/: doctor.txt  memory-search-auth.txt  pack-fragments.txt  prune-logs.txt
go/submodules/CTX/demo/fixtures/opencode-auth-lab/src/auth/: audit.ts  session.ts  tokens.ts
go/submodules/CTX/demo/fixtures/opencode-auth-lab/src/http/: refresh-route.ts
go/submodules/CTX/docs/: architecture.md  commands.md  demo-script.md  demo-walkthrough.md  external-benchmark-agentsmd.md  final-qa.md  guidelines.md  install.md  opencode-integration.md  release-playbook.md  security.md
go/submodules/CTX/docs/assets/: README.md
go/submodules/CTX/scripts/: install.sh
go/submodules/CTX/scripts/demo/: agentsmd-external-benchmark.sh  opencode-auth-lab-benchmark.sh  opencode-auth-lab-mcp-smoke.sh  opencode-auth-lab-smoke.sh
go/submodules/CTX/scripts/release/: assemble-release-assets.py  build.sh  final-qa.sh  install-smoke.sh  opencode-smoke.sh  prepare-homebrew-formula.sh  publish-crate.sh  publish-github-release.sh  publish-npm.sh  verify-artifact.sh
go/submodules/CTX/templates/: config.default.toml
(+15396 files in other folders)
