[package]
name = "ctx-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Syntax and symbol extraction for CTX source indexing"

[dependencies]
regex.workspace = true
serde.workspace = true
tree-sitter = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-typescript = "0.23"
