[package]
name = "ctx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "OpenCode-first graph memory and local context runtime for coding agents"
homepage = "https://github.com/Alegau03/CTX"
readme = "../../README.md"
keywords = ["opencode", "mcp", "context", "agent", "graph"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctx-core.workspace = true
ctx-graph.workspace = true
ctx-intake.workspace = true
ctx-hooks.workspace = true
ctx-mcp.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
