[package]
name = "ctx-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Graph and memory storage layer for CTX"

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
