[package]
name = "ctx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local MCP server implementation for CTX"

[dependencies]
anyhow.workspace = true
ctx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http = "0.12"
walkdir.workspace = true
rusqlite.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
ctx-config.workspace = true
tempfile.workspace = true
