[package]
name = "ctx-pack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Context pack assembly and rewriting for CTX"

[dependencies]
ctx-token.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
