[package]
name = "ctx-prune"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Log and diff pruning utilities for CTX"

[dependencies]
regex.workspace = true
serde.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
