[package]
name = "ctx-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantic ranking helpers for CTX retrieval"

[features]
default = []
onnx = ["dep:tract-onnx"]

[dependencies]
serde.workspace = true
thiserror.workspace = true
tract-onnx = { version = "0.22", optional = true }

[dev-dependencies]
tempfile.workspace = true
